--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "uvicorn>=0.35.0",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
-    "google-adk"
+    "google-adk",
+    "gradio>=5.30.0"
 ]
